# kuroko

./: .gitattributes  .gitignore  Doxyfile  LICENSE  Makefile  Makefile.install  Makefile.static  README.md  SECURITY.md  asdeltas.krk  bindNativeMethod.krk  builtins.c  builtins.krk  chunk.c  chunk.h  codectests.krk  compiler.c  compiler.h  debug.c  debug.h  demo.krk  kuroko-pre-upx  kuroko-tiny  kuroko.c  kuroko.h  memory.c  memory.h  meson.build  object.c  object.h  rline.c  rline.h  scanner.c  scanner.h  system.krk  table.c  table.h  test.krk  testList.krk  testparity.krk  (+4 more)
.github/workflows/: build.yml  codeql-analysis.yml
bench/: bench.krk  bench.py  fib.krk  fib.py  inner_loop.krk  inner_loop.py  list.krk  list.py  maketree.krk  maketree.py
bench/fasttimer/: Makefile  __init__.py  mpy_timer.c  py_fasttimer.c  setup.py
docs/: Doxyfile  DoxygenLayout.xml  c_functions.md  cloc.txt  doxy.css  doxygen_footer.html  doxygen_header.html  embedding.md  grammar.ebnf  index.md  lang_compiler.md  lang_expressions.md  lang_intro.md  lang_objects.md  lang_statements.md  syntax.md  tabs-override.css
modules/: __builtins__.krk  callgrind.krk  collections.krk  dataclasses.krk  dis.krk  dummy.krk  hashmap.krk  help.krk  itertools.krk  json.krk  list.krk  maindemo.krk  pheap.krk  range.krk  string.krk  system.krk
modules/codecs/: __init__.krk  bespokecodecs.krk  big5.krk  binascii.krk  dbdata.krk  dbextra.krk  dbextra_data_7bit.krk  dbextra_data_7bit_cnext.krk  dbextra_data_8bit.krk  eucjp.krk  extra.krk  extracnext.krk  extradata.krk  gen_dbdata.py  gen_sbencs.py  infrastructure.krk  isweblabel.krk  pifonts.krk  sbencs.krk  sbextra.krk  shiftjis.krk  unifiedhangul.krk
modules/foo/: __init__.krk  __main__.krk  extra.krk  relative.krk
modules/foo/bar/: __init__.krk  baz.krk  relative.krk
modules/syntax/: highlighter.krk
modules/temporal/: __init__.krk
src/: builtins.c  builtins.krk  chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  dis.c  exceptions.c  fileio.c  kuroko.c  kuroko.h  math.c  memory.c  memory.h  meson.build  methods.h  module_dis.c  module_fileio.c  module_math.c  module_os.c  module_socket.c  module_time.c  module_timeit.c  obj_base.c  obj_bytes.c  obj_bytes.c.orig  obj_dict.c  obj_function.c  obj_gen.c  obj_list.c  obj_long.c  obj_numeric.c  obj_range.c  obj_set.c  obj_slice.c  obj_str.c  obj_tuple.c  obj_typing.c  (+22 more)
src/kuroko/: chunk.h  compiler.h  debug.h  kuroko.h  memory.h  meson.build  object.h  scanner.h  table.h  threads.h  util.h  value.h  vm.h
src/modules/: meson.build  module__pheap.c  module_dis.c  module_fcntl.c  module_fileio.c  module_gc.c  module_locale.c  module_math.c  module_os.c  module_poll.c  module_random.c  module_socket.c  module_stat.c  module_time.c  module_timeit.c  module_wcwidth.c
test/: bindNativeMethod.krk  day1.in  day1.krk  day1.krk.expect  day2.in  day2.krk  day2.krk.expect  day23.krk  day23.krk.expect  day3.in  day3.krk  day3.krk.expect  day4.in  day4.krk  day4.krk.expect  day5.in  day5.krk  day5.krk.expect  day6.in  day6.krk  day6.krk.expect  day7.in  day7.krk  day7.krk.expect  generateLongListTest.krk  test.krk  test.krk.expect  testAnnotations.krk  testAnnotations.krk.expect  testArgsKwargs.krk  testArgsKwargs.krk.expect  testArgumentExpansions.krk  testArgumentExpansions.krk.expect  testArgv.krk  testArgv.krk.expect  testAssert.krk  testAssert.krk.expect  testAsyncAwait.krk  testAsyncAwait.krk.expect  testAttributePacking.krk  (+270 more)
tools/: args.c  callgrind.c  can-floor-without-libm.sh  common.h  compile.c  deb-ver.krk  debug-stats.c  demo.c  gendoc.krk  genoverlongjumpstest.krk  make_test_upvalues.krk  sandbox.c  simple-repl.h  watchdog.c
tools/codecs/: gen_dbdata.krk  gen_sbencs.krk
tools/codectools/: extradatadeltas.krk  gen_dbdata.krk  gen_sbencs.krk
tools/kuroko/: chunk.h  compiler.h  kuroko.h  object.h  scanner.h  table.h  threads.h  util.h  value.h  vm.h
