headers = ['chunk.h',
           'compiler.h',
           'debug.h',
           'kuroko.h',
           'memory.h',
           'object.h',
           'scanner.h',
           'table.h',
           'threads.h',
           'util.h',
           'value.h',
           'vm.h',
           ]

install_headers(headers, subdir : 'kuroko')
